# tournament-system

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: tournament-system.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  bp_tab.py  elimination.py  judge.py  models.py  registration.py  round_robin.py  swiss.py
src/viz/: __init__.py  app.py
tests/: test_bp_tab.py  test_elimination.py  test_judge.py  test_round_robin.py  test_swiss.py
